<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:id="@+id/layout_feedback"
    tools:context=".ui.feedback.FeedbackFragment">

    <LinearLayout
        android:id="@+id/profileEditLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/bg_stroke3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                tools:ignore="InefficientWeight">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_feedback_type"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:overlapAnchor="false"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/bg_stroke3"
                    android:backgroundTint="@color/white"
                    android:theme="@style/custom_spinner_style"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:entries="@array/spinner_feedback_type" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/spinner_feedback_type"
                    app:layout_constraintEnd_toEndOf="@id/spinner_feedback_type"
                    app:layout_constraintTop_toTopOf="@id/spinner_feedback_type"
                    app:srcCompat="@drawable/ic_arrow_drop_down"
                    tools:ignore="ContentDescription" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:hint="@string/feedback_user_name_input"
                android:background="@drawable/bg_stroke3"
                android:backgroundTint="@color/white"
                android:textColor="@color/black_80"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userEmailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/feedback_user_email_input"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:background="@drawable/bg_stroke3"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPhoneNumberLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_phoneNumber_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:hint="@string/feedback_user_mobile_input"
                android:maxLength="11"
                android:background="@drawable/bg_stroke3"
                android:backgroundTint="@color/white"
                android:textColor="@color/black_80"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userFeedbackLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_feedback_input"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:imeOptions="actionNext"
                tools:ignore="HardcodedText"
                android:gravity="start"
                android:hint="@string/feedback_user_opinion_input"
                android:background="@drawable/bg_stroke3"
                android:backgroundTint="@color/white"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="text|textMultiLine"
                android:textColor="@color/black_80"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_feedback_Btn"
            android:layout_width="180dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/cod_bg_six"
            android:text="@string/feedback_submit"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_submit_feedback"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"
        android:layout_marginBottom="250dp"
        style="?android:attr/progressBarStyleLarge"
        android:indeterminate="true"
        android:indeterminateTint="@color/teal_200"
        android:progressTint="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>