<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/content_item"
    app:cardCornerRadius="4dp"
    app:contentPadding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/wifi_ssid"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:layout_marginBottom="2dp"
            android:text="@string/wifi_ssid"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/wifi_ssid"
            app:layout_constraintTop_toTopOf="@id/wifi_ssid">

            <TextView
                android:id="@+id/wifi_ssid_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:includeFontPadding="false"
                android:paddingBottom="1dp"
                android:text="000000"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/wifi_ssid" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            app:barrierDirection="end"
            app:constraint_referenced_ids="wifi_name,wifi_password" />

        <TextView
            android:id="@+id/wifi_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/wifi_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator"
            />

        <TextView
            android:id="@+id/wifi_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@id/separator"
            android:text="Arir@Passenger" />

        <TextView
            android:id="@+id/wifi_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_password"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wifi_name" />

        <TextView
            android:id="@+id/wifi_password_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/wifi_name_value"
            android:text="123456" />

       <!-- <TextView
            android:id="@+id/key3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alternative Number"
            android:textColor="@color/black_80"

            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_liable_person"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/alterMobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:textColor="@color/black_80"
            android:textIsSelectable="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/liable_person_email"
            tools:text="01555555555"
            tools:visibility="visible" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>